# kokoro-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
scripts/: init.sh
src/: __init__.py  conv.py  inference.py  paths.py  preprocess.py
store/: tokens.json
